--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@
 .idea/**/dictionaries
 .idea/**/shelf
 .idea/
-.github
 *.iml
 
 # AWS User-specific
@@ -223,3 +222,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,osx,windows,intellij,netbeans,maven
+/.github/
