--- a/.gitignore
+++ b/.gitignore
@@ -222,4 +222,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,osx,windows,intellij,netbeans,maven
-/.github/
+# /.github/
