--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,14 @@
             <artifactId>gson</artifactId>
             <version>2.8.6</version>
         </dependency>
-        
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
+
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
