--- a/.github/workflows/mavenworkflow.yml
+++ b/.github/workflows/mavenworkflow.yml
@@ -6,13 +6,13 @@ on:
 jobs:
   Do-the-travis-thing:
     runs-on: ubuntu-20.04 #or ubuntu-latest
-    # services:
-    #   mysql:
-    #     image: mysql:8.0
-    #     env:
-    #       DB_DATABASE: startcode_test
-    #       DB_USER: dev
-    #       DB_PASSWORD: ax2
+    services:
+      mysql:
+        image: mysql:8.0
+        env:
+          DB_DATABASE: CA1
+          DB_USER: dev
+          DB_PASSWORD: ${{ secrets.DATABASEPASSWORD }}
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -42,7 +42,7 @@ jobs:
           # mysql root password: ${{ secrets.RootPassword }} # Required if "mysql user" is empty, default is empty. The root superuser password
           mysql user: 'dev' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
           # mysql password: ${{ secrets.DatabasePassword }} # Required if "mysql user" exists. The password for the "mysql user"
-          mysql password: ${{secrets.DatabasePassword}}
+          mysql password: 'ax2'
       - name: Cache Maven packages # cache maven repos to save time on future builds
         uses: actions/cache@v2
         with:
